--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #f3f6fa;
-  color: #333;
+  background-color: #05418f;
+  color: #1d1a1a;
   margin: 0;
   padding: 0;
   text-align: center;
@@ -9,7 +9,7 @@ body {
 
 header {
   background-color: #0078d7;
-  color: white;
+  color: rgb(80, 35, 35);
   padding: 20px;
 }
 
@@ -20,8 +20,8 @@ nav {
 nav a {
   margin: 0 10px;
   text-decoration: none;
-  background-color: #0078d7;
-  color: white;
+  background-color: #138b8b;
+  color: rgb(59, 32, 32);
   padding: 8px 14px;
   border-radius: 5px;
 }
@@ -33,7 +33,7 @@ nav a:hover {
 main {
   margin: 20px;
   padding: 20px;
-  background-color: white;
+  background-color: rgb(141, 108, 108);
   border-radius: 8px;
   max-width: 700px;
   margin-left: auto;
@@ -42,7 +42,7 @@ main {
 }
 
 pre {
-  background: #eee;
+  background: #bdb9b9;
   padding: 10px;
   border-radius: 6px;
   text-align: left;
@@ -52,14 +52,14 @@ pre {
 button {
   padding: 10px 16px;
   border: none;
-  background-color: #0078d7;
-  color: white;
+  background-color: #8f9499;
+  color: rgb(97, 43, 43);
   border-radius: 6px;
   cursor: pointer;
 }
 
 button:hover {
-  background-color: #005ea8;
+  background-color: #4b5761;
 }
 
 .caixa {
@@ -69,7 +69,7 @@ button:hover {
 }
 
 .exemplo {
-  background-color: #e3f2fd;
+  background-color: #010b13;
   padding: 10px;
   border-radius: 6px;
 }
